package ru.itmo.rogue.control;


import ru.itmo.rogue.utils.AbstractSubscribable;
import ru.itmo.rogue.utils.Updatable;

import java.util.ArrayList;
import java.util.List;

public class KeyboardController extends AbstractSubscribable<Signal> implements Controller<Signal> {

    // TODO: Implement

    @Override
    public void loop() {
        // TODO: Implement
    }
}
