package ru.itmo.rogue.control;

public enum Signal {
    UP, DOWN, LEFT, RIGHT,
    BACK /* Esc on Keyboard */, SELECT /* Enter on Keyboard */
}