package ru.itmo.rogue.model.game;

public class ItemGenerator {
}
