package ru.itmo.rogue.view;

import ru.itmo.rogue.utils.Updatable;

public interface View<T> extends Updatable<T> {

}
