@startuml

class App {
   - {static} Controller controller
   - {static} Model model
   - {static} View view

   + {static} void main()
}

interface Controller {
   + void loop()
}

interface Model {
   + update()
}

class GameModel {}

interface View {
   + update()
}

class KeyboardController {}

enum Signal {
   UP
   DOWN
   LEFT
   RIGHT
   BACK
   SELECT
}

class LanternaView {}

class GameLogic {
   - State state
   - EnemyGenerator enGen
   - ItemGenerator itemGen
   - LevelGenerator lvlGen
}

class InventoryLogic {
   - State state
}

class LevelLogic {
   - State state
   - Judge judge
}

class Judge {
   ~int make_decision(Unit attacker, Unit defender)
}

class EnemyGenerator {}
class ItemGenerator {}
class LevelGenerator {}

class State {
   + {static} DEFAULT_PLAYER_HEALTH
   + {static} DEFAULT_PLAYER_STRENGTH
   + Focus focus
   + Unit player
   + List<Unit> enemies
   + MapTile[][] map   
}

class Unit {
   # int health
   # int strength
   # List<Item> stash
   # Position position
   # UnitStrategy strategy
}

class UnitStrategy {
   ~Action getAction(Unit unit, State state)
}

interface Item {}

Enum Focus {
   GAME
   LEVEL
   INVENTORY
}

Enum MapTile {
   FLOOR
   WALL
   DOOR_IN
   DOOR_OUT
}

class Delta {
   - List<UnitChange> unitChanges
   - List<InventoryChange> inventoryChanges
   + UnitChange uChange
   + InventoryChange iChange
   + UnitHealthChange uhChange

   + add(UnitChange change)
   + add(InventoryChange change)
}

App o-- Controller
App o-- Model
App o-- View

Controller <|-- KeyboardController

View <|-- LanternaView

Model <|-- GameModel

GameModel o-- GameLogic
GameModel o-- LevelLogic
GameModel o-- InventoryLogic

GameLogic o-- State
GameLogic o-- EnemyGenerator
GameLogic o-- ItemGenerator
GameLogic o-- LevelGenerator  

LevelLogic o-- State
LevelLogic o-- Judge

InventoryLogic o-- State

State o-- Unit
State +-- Focus
State +-- MapTile

Unit o-- Item
Unit o-- UnitStrategy

GameModel -- Delta
LanternaView -- Delta
KeyboardController -- Signal
GameModel -- Signal
@enduml
